--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>GST Calculator</title>
     <link rel="icon" href="./assets/logo.png" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -25,7 +27,7 @@
     <div class="devinfo">
       <h3>
         Developed by Ashutosh Swamy<br />GitHub -
-        <a href="https://github.com/ItzAshu397">Click Here</a>
+        <a href="https://github.com/devashu397">Click Here</a>
       </h3>
     </div>
   </body>
